--- a/Android Projects/EgorHelminth_SurfaceView/app/src/main/AndroidManifest.xml
+++ b/Android Projects/EgorHelminth_SurfaceView/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/helminth_icon"
-        android:label="@string/app_name"
+        android:label="HELMINTH"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
